# python-compsens

./: .gitignore  format_code  main.py  main_fft.py  pyproject.toml  requirements.txt
compsens/: __init__.py  trafo.py
